# tracebi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTES.md  README.md  docker-compose.yml  html_renderer.py  netlify.toml  phase2_example.py  pyproject.toml  railway.toml  test_phase2.py  theme-mockup.html
.github/workflows/: ci.yml
docs/: analyst-guide.md  notebook-guide.md  overview.html  web-customization.md
examples/: analyst_quickstart.py  phase1_example.py  phase25_example.py  phase2_example.py  phase3_example.py  phase4_example.py
models/: sales_model.py  wealth_model.py
netlify/functions/api/: api.py  requirements.txt
requests/: _template.py  analyst_demo.py
seeds/: seed_db.py
tests/: test_phase1.py  test_phase2.py  test_phase25.py  test_phase3.py  test_phase4.py  test_phase5.py
tracebi/: __init__.py  _dev_server.py  _notebook.py  _params.py  _request_runner.py  cli.py  demo.py  model_registry.py  pipeline_registry.py
tracebi/connectors/: __init__.py  base.py  bigquery_connector.py  csv_connector.py  duckdb_connector.py  memory_connector.py  snowflake_connector.py  sql_connector.py
tracebi/dashboard/: __init__.py  dashboard.py  panels.py  server.py
tracebi/etl/: __init__.py  bronze.py  gold.py  silver.py
tracebi/lineage/: __init__.py  diagram.py
tracebi/model/: __init__.py  data_model.py  dataset.py  star_schema.py
tracebi/pipeline/: __init__.py  runner.py
tracebi/reports/: __init__.py  base_renderer.py  excel_renderer.py  html_renderer.py  report.py
tracebi/web/: __init__.py  discovery.py  register.py
web/: demo_app.py  requirements.txt  run.py
web/api/: auth.py  errors.py  lineage_graph.py  main.py  registry.py  run_store.py
web/api/routers/: connectors.py  dashboards.py  dev.py  docs.py  models.py  pipelines.py  reports.py  requests.py  ui.py
web/demo_app/: __init__.py  banking.py  dashboard.py  model.py  pipeline.py  registry.py
web/demo_app/reports/: analyst_demo.py  aum_by_branch.py  client_activity.py  customer_overview.py  medallion_revenue.py  revenue_trend.py  sales_summary.py
web/templates/: base.html  connectors.html  dashboards.html  index.html  models.html  pipelines.html  reports.html
web/ui/: index.html  package-lock.json  package.json  vite.config.js
web/ui/src/: App.jsx  api.js  main.jsx
web/ui/src/components/: CommandPalette.jsx  Layout.jsx  Lineage.jsx  Shared.jsx
web/ui/src/pages/: Connectors.jsx  Dashboards.jsx  Explore.jsx  GettingStarted.jsx  Home.jsx  Models.jsx  Pipelines.jsx  Reports.jsx  Requests.jsx
web/ui/src/styles/: global.css
